fix wrap issue in safari

--- a/style.css
+++ b/style.css
@@ -44,11 +44,9 @@ button {
 }
 
 .schedule {
-	-ms-flex-preferred-size: 60%;
-	    flex-basis: 60%;
-	-webkit-box-flex: 100;
-	    -ms-flex-positive: 100;
-	        flex-grow: 100;
+	-webkit-box-flex: 1;
+	    -ms-flex: 1 0 40em;
+	        flex: 1 0 40em;
 }
 
 .nav {
@@ -87,9 +85,6 @@ table {
 	border-collapse: collapse;
 	height: 100%;
 	width: 100%;
-	-webkit-box-flex: 0;
-	    -ms-flex: 0 0 65%;
-	        flex: 0 0 65%;
 }
 
 /* eatd is there for block alignment */
@@ -133,8 +128,6 @@ button#dontfill { height: 1.6em; }
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: column;
 	        flex-direction: column;
-	-ms-flex: 1 0 35%;
-	    flex: 1 0 35%;
 }
 
 .short {
